fixed spacing

--- a/frontend/src/styles/examBank.module.scss
+++ b/frontend/src/styles/examBank.module.scss
@@ -3,7 +3,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
-  margin-bottom: 75px;
   max-width: 850px;
 }
 
